all is good for layout

--- a/src/main-layout/_main-layout.scss
+++ b/src/main-layout/_main-layout.scss
@@ -1,4 +1,8 @@
 .main-layout {
-    height: 100dvh;
-    background-color: red;
+    min-height: 100dvh;
+    display: flex;
+    flex-direction: column;
+    & > :nth-child(2){
+     flex: 1;
+    }
 }
