--- a/src/main-layout/components/header/_header.scss
+++ b/src/main-layout/components/header/_header.scss
@@ -13,7 +13,9 @@
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-
+  & > * {
+    
+  }
   &__hero {
     height: 100%;
   }
