--- a/src/main-layout/components/header/_header.scss
+++ b/src/main-layout/components/header/_header.scss
@@ -3,7 +3,6 @@
   padding: 0 5rem;
   height: 8rem;
   position: relative;
-  z-index: 100;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -13,15 +12,19 @@
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
+  overflow: hidden;
   & > * {
-    
+    flex: 1;
   }
   &__hero {
     height: 100%;
+    
   }
   &__logo {
+    background-color: #444;
+    text-align: center;
     img {
-        height: 3.5rem;
+      height: 3.5rem;
     }
   }
 }
@@ -64,7 +67,7 @@
 .nav--tours {
   -webkit-box-flex: 0;
   -ms-flex: 0 1 40%;
-  flex: 0 1 40%;
+  //flex: 0 1 40%;
 }
 @media only screen and (max-width: 62.5em) {
   .nav--tours {
@@ -78,11 +81,10 @@
 }
 .nav--user {
   -webkit-box-flex: 0;
-  -ms-flex: 0 1 40%;
-  flex: 0 1 40%;
-  -webkit-box-pack: end;
-  -ms-flex-pack: end;
-  justify-content: flex-end;
+  display: flex;
+  & > a {
+    margin-left: auto;
+  }
 }
 .nav__el,
 .nav__el:link,
